--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mongoose": "^5.10.3",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsdom": "^16.5.1",
     "mongoose": "5.11.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/jest-expect-message": "^1.0.3",
+    "@types/jsdom": "^16.2.7",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
     "nodemon": "^2.0.7",
