--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "npm run build && node dist/server.js",
     "dev": "nodemon --watch '**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' server.ts",
-    "build": "tsc"
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "clean": "rm -rf dist"
   },
   "author": "",
   "license": "ISC",
@@ -16,13 +18,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.5.1",
-    "mongoose": "5.11.15"
+    "mongoose": "5.11.15",
+    "node-schedule": "^2.0.0",
+    "rand-picker": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/jest-expect-message": "^1.0.3",
     "@types/jsdom": "^16.2.7",
+    "@types/node-schedule": "^1.3.1",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
     "nodemon": "^2.0.7",
