--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "date-ops": "^2.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.5.1",
+    "luxon": "^1.26.0",
     "mongoose": "5.11.15",
     "node-schedule": "^2.0.0",
     "rand-picker": "^1.0.0"
@@ -28,7 +30,15 @@
     "@types/jest": "^26.0.20",
     "@types/jest-expect-message": "^1.0.3",
     "@types/jsdom": "^16.2.7",
+    "@types/luxon": "^1.26.2",
     "@types/node-schedule": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
     "nodemon": "^2.0.7",
