--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand",
     "start": "([ ! -d dist ] && npm run build || true) && node dist/server.js",
     "dev": "nodemon --watch '**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' server.ts",
     "prebuild": "npm run clean",
@@ -12,26 +12,36 @@
     "postbuild": "ln -s ../.env dist/.env",
     "clean": "rm -rf dist"
   },
-  "author": "",
+  "author": "Daniel Sales Álvarez",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
     "date-ops": "^2.1.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsdom": "^16.5.1",
     "luxon": "^1.26.0",
     "mongoose": "5.11.15",
+    "node-id3": "^0.2.3",
+    "node-media-server": "^2.2.8",
     "node-schedule": "^2.0.0",
-    "rand-picker": "^1.0.0"
+    "rand-picker": "^1.0.0",
+    "sha256-file": "^1.0.0",
+    "youtube-mp3-downloader": "^0.7.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
+    "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/jest-expect-message": "^1.0.3",
     "@types/jsdom": "^16.2.7",
     "@types/luxon": "^1.26.2",
+    "@types/mongoose": "^5.11.97",
     "@types/node-schedule": "^1.3.1",
+    "@types/sha256-file": "^1.0.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
@@ -39,11 +49,15 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
-    "jest": "^26.6.3",
+    "jest": "^27",
     "jest-expect-message": "^1.0.2",
     "nodemon": "^2.0.7",
-    "ts-jest": "^26.5.3",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "source-map-support": "^0.5.19",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27",
+    "ts-node": "^10.0.0",
+    "tslib": "^2.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.4"
   }
 }
