--- a/server/.env.test
+++ b/server/.env.test
@@ -1,5 +1,8 @@
-MEDIA_PATH=./tests/files/series
-MUSIC_PATH=./tests/files/music
+MUSICS_PATH=./tests/files/music
+VIDEOS_PATH=./tests/files/video
+SERIES_PATH=./tests/files/series
+MOVIES_PATH=./tests/files/movies
+
 MONGO_HOSTNAME=cluster0.qx3kk.mongodb.net
 MONGO_DB=muslibtest?retryWrites=true&w=majority
 MONGO_PORT=
