--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "author": "Daniel Sales Álvarez",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "date-ops": "^2.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -35,7 +37,6 @@
     "@types/express": "^4.17.11",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
-    "@types/jest-expect-message": "^1.0.3",
     "@types/jsdom": "^16.2.7",
     "@types/luxon": "^1.26.2",
     "@types/mongoose": "^5.11.97",
@@ -50,7 +51,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "jest": "^27",
-    "jest-expect-message": "^1.0.2",
     "nodemon": "^2.0.7",
     "source-map-support": "^0.5.19",
     "supertest": "^6.1.3",
