--- a/server/.env.test
+++ b/server/.env.test
@@ -1,7 +1,7 @@
-MUSICS_PATH=./tests/files/music
-VIDEOS_PATH=./tests/files/video
-SERIES_PATH=./tests/files/series
-MOVIES_PATH=./tests/files/movies
+MUSICS_PATH=tests/files/music
+VIDEOS_PATH=tests/files/video
+SERIES_PATH=tests/files/serie
+MOVIES_PATH=tests/files/movie
 
 MONGO_HOSTNAME=cluster0.qx3kk.mongodb.net
 MONGO_DB=muslibtest?retryWrites=true&w=majority
