--- a/server/.env.test
+++ b/server/.env.test
@@ -4,7 +4,7 @@ SERIES_PATH=tests/files/serie
 MOVIES_PATH=tests/files/movie
 
 MONGO_HOSTNAME=cluster0.qx3kk.mongodb.net
-MONGO_DB=muslibtest?retryWrites=true&w=majority
+MONGO_DB=mcenter-test?retryWrites=true&w=majority
 MONGO_PORT=
 MONGO_USER=root
 MONGO_PASSWORD=dietpi
