--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "server",
+  "name": "mcenter-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest --runInBand",
-    "start": "([ ! -d dist ] && npm run build || true) && node dist/server.js",
-    "dev": "nodemon --watch '**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' server.ts",
+    "test:watch": "jest --runInBand --watchAll",
+    "test:actions": "jest --runInBand --watchAll --testPathPattern=src/actions",
+    "test:db": "jest --runInBand --watchAll --testPathPattern=src/db",
+    "test:routes": "jest --runInBand --watchAll --testPathPattern=src/routes",
+    "start": "([ ! -d dist ] && npm run build || true) && node dist/index.js",
+    "dev": "nodemon --watch '**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' index.ts",
     "prebuild": "npm run clean",
     "build": "tsc",
     "postbuild": "ln -s ../.env dist/.env",
@@ -16,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@typescript-eslint/experimental-utils": "^4.20.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "date-ops": "^2.1.0",
@@ -28,30 +33,31 @@
     "node-id3": "^0.2.3",
     "node-media-server": "^2.2.8",
     "node-schedule": "^2.0.0",
-    "rand-picker": "^1.0.0",
+    "rand-picker": "^1.1.0",
     "sha256-file": "^1.0.0",
     "youtube-mp3-downloader": "^0.7.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.13",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/jsdom": "^16.2.7",
     "@types/luxon": "^1.26.2",
+    "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node-schedule": "^1.3.1",
     "@types/sha256-file": "^1.0.0",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "jest": "^27",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7",
     "source-map-support": "^0.5.19",
     "supertest": "^6.1.3",
