--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "strict": true,
+    "noImplicitAny": false,
     "declaration": true,
     "outDir": "./dist",
     "sourceMap": true,
