--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "test:docker": "tests/docker.sh",
     "test": "jest --runInBand",
     "test:watch": "jest --runInBand --watchAll",
     "test:actions": "jest --runInBand --watchAll --testPathPattern=src/actions",
