--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "build/server.js",
   "scripts": {
-    "test": "jest",
-    "start": "([ ! -d dist ] && npm run build || true) && node dist/server.js",
-    "dev": "nodemon --watch '**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' server.ts",
+    "start": "node build/server.js",
+    "start:watch": "NODE_ENV=development nodemon -r esm server.ts",
     "prebuild": "npm run clean",
-    "build": "tsc",
-    "postbuild": "ln -s ../.env dist/.env",
-    "clean": "rm -rf dist"
+    "build": "npm run build:raw",
+    "build:raw": "tsc -p tsconfig-build.json",
+    "postbuild": "ln -s ../.env build/.env",
+    "clean": "rm -rf build",
+    "test": "NODE_ENV=test jest --maxWorkers=1",
+    "test:watch": "yarn test -- --watch",
+    "test:coverage": "yarn test -- --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -21,30 +24,18 @@
     "express": "4.18.2",
     "jsdom": "16.5.1",
     "luxon": "1.26.0",
-    "mongoose": "5.11.15",
+    "mongoose": "6.9.0",
     "node-schedule": "2.0.0",
     "rand-picker": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.16",
-    "@types/jest": "29.4.0",
     "@types/jest-expect-message": "1.1.0",
     "@types/jsdom": "16.2.7",
     "@types/luxon": "1.26.2",
     "@types/node-schedule": "2.1.0",
-    "@typescript-eslint/eslint-plugin": "5.49.0",
-    "@typescript-eslint/parser": "5.49.0",
-    "eslint": "8.33.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-import-resolver-typescript": "3.5.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest": "27.2.1",
-    "jest": "29.4.1",
-    "prettier": "2.8.3",
     "jest-expect-message": "1.1.3",
     "nodemon": "2.0.20",
-    "ts-jest": "29.0.5",
-    "tslib": "2.5.0",
-    "typescript": "4.9.4"
+    "tslib": "2.5.0"
   }
 }
