--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "declaration": true,
-    "outDir": "./dist",
+    "outDir": "build",
     "sourceMap": true,
     "inlineSources": true,
     "downlevelIteration": true,
@@ -13,32 +13,13 @@
     "esModuleInterop": true,
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "noImplicitAny": true,
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"]
   },
-  "include": [
-    "src/**/*.ts",
-  ],
-  "files": [
-    "server.ts"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "**/*.spec.ts"
-  ],
-  "filesGlob": [
-    "src/**/*.ts"
-  ],
-  "types": [
-    "node"
-  ],
-  "typeRoots": [
-    "../node_modules/@types"
-  ]
+  "include": ["src/**/*.ts"],
+  "files": ["server.ts"],
+  "exclude": ["node_modules"],
+  "types": ["node"],
+  "typeRoots": ["../node_modules/@types"]
 }
