--- a/server/package.json
+++ b/server/package.json
@@ -17,24 +17,27 @@
     "test:coverage": "yarn test -- --coverage"
   },
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "^0.21.4",
     "date-ops": "2.1.0",
     "dotenv": "8.2.0",
     "express": "4.18.2",
+    "find-process": "^1.4.7",
     "jsdom": "16.5.1",
-    "luxon": "1.26.0",
+    "luxon": "^1.28.1",
     "mongoose": "6.9.0",
     "node-schedule": "2.0.0",
     "rand-picker": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.16",
-    "@types/jest-expect-message": "1.1.0",
+    "@types/jest": "29.4.0",
     "@types/jsdom": "16.2.7",
     "@types/luxon": "1.26.2",
     "@types/node-schedule": "2.1.0",
+    "jest": "29.4.1",
     "jest-expect-message": "1.1.3",
     "nodemon": "2.0.20",
+    "ts-jest": "29.0.5",
     "tslib": "2.5.0"
   }
 }
