--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "server"
   ],
   "dependencies": {
-    "esm": "3.2.25"
+    "esm": "3.2.25",
+    "pnpm": "^8.6.6"
   },
   "devDependencies": {
-    "typescript": "4.9.5",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@typescript-eslint/eslint-plugin": "5.49.0",
@@ -36,7 +36,8 @@
     "prettier": "2.8.3",
     "sonarqube-scanner": "2.8.2",
     "standard-version": "9.5.0",
-    "tsconfig-paths": "4.1.2"
+    "tsconfig-paths": "4.1.2",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "release": "standard-version",
