--- a/server/package.json
+++ b/server/package.json
@@ -6,37 +6,49 @@
   "scripts": {
     "start": "NODE_ENV=production node -r ts-node/register/transpile-only -r tsconfig-paths/register build/server.js",
     "start:watch": "NODE_ENV=development nodemon",
-    "prebuild": "npm run clean:build",
-    "build": "npm run build:raw",
-    "build:raw": "tsc -p tsconfig-build.json",
-    "postbuild": "ln -s ../.env build/.env",
-    "clean:build": "rm -rf build",
-    "clean:modules": "rm -rf node_modules",
+    "build": "pnpm build:clean && pnpm build:raw",
+    "build:raw": "tsc -p tsconfig-build.json && resolve-tspaths -o build/src && pnpm build:ln",
+    "build:clean": "rm -rf build",
+    "build:ln": "ln -s ../.env build/.env",
     "test": "NODE_ENV=test jest --maxWorkers=1",
-    "test:watch": "yarn test -- --watch",
-    "test:coverage": "yarn test -- --coverage"
+    "test:watch": "pnpm run test --watch",
+    "test:coverage": "pnpm run test --coverage",
+    "test:coverage:clean": "rm -rf coverage",
+    "lint:eslint": "eslint **/*.{ts,js,tsx,jsx}",
+    "lint:prettier": "prettier **/*.{json,jsonc,scss,yml}",
+    "lint:fix": "pnpm run lint:prettier --write && pnpm run lint:eslint --fix",
+    "version:release": "standard-version",
+    "git:pr": "pnpm git:pr:create && pnpm git:pr:merge-delete",
+    "git:pr:create": "gh pr create --base main --fill",
+    "git:pr:merge": "gh pr merge --auto --rebase",
+    "git:pr:merge-delete": "gh pr merge --auto --rebase --delete-branch"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "0.21.4",
     "date-ops": "2.1.0",
     "dotenv": "8.2.0",
+    "envalid": "7.3.1",
     "express": "4.18.2",
     "find-process": "^1.4.7",
+    "i18n": "0.15.1",
     "jsdom": "16.5.1",
-    "luxon": "^1.28.1",
+    "luxon": "1.28.1",
     "mongoose": "6.9.0",
     "node-schedule": "2.0.0",
     "rand-picker": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.16",
+    "@types/i18n": "^0.13.6",
     "@types/jest": "29.4.0",
     "@types/jsdom": "16.2.7",
     "@types/luxon": "1.26.2",
     "@types/node-schedule": "2.1.0",
+    "@types/supertest": "^2.0.12",
     "jest": "29.4.1",
     "jest-expect-message": "1.1.3",
     "nodemon": "2.0.20",
+    "supertest": "^6.3.3",
     "ts-jest": "29.0.5",
     "tslib": "2.5.0"
   }
