--- a/server/package.json
+++ b/server/package.json
@@ -25,17 +25,17 @@
   },
   "dependencies": {
     "axios": "0.21.4",
-    "date-ops": "2.1.0",
-    "dotenv": "8.2.0",
+    "date-ops": "2.2.0",
+    "dotenv": "16.3.1",
     "envalid": "7.3.1",
     "express": "4.18.2",
-    "find-process": "^1.4.7",
+    "find-process": "1.4.7",
     "i18n": "0.15.1",
-    "jsdom": "16.5.1",
-    "luxon": "1.28.1",
+    "jsdom": "22.1.0",
+    "luxon": "3.3.0",
     "mongoose": "6.9.0",
-    "node-schedule": "2.0.0",
-    "rand-picker": "1.0.0"
+    "node-schedule": "2.1.1",
+    "rand-picker": "1.1.0"
   },
   "devDependencies": {
     "@types/express": "4.17.16",
@@ -44,11 +44,10 @@
     "@types/jsdom": "16.2.7",
     "@types/luxon": "1.26.2",
     "@types/node-schedule": "2.1.0",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "2.0.12",
     "jest": "29.4.1",
-    "jest-expect-message": "1.1.3",
     "nodemon": "2.0.20",
-    "supertest": "^6.3.3",
+    "supertest": "6.3.3",
     "ts-jest": "29.0.5",
     "tslib": "2.5.0"
   }
