--- a/.github/workflows/bumping.yml
+++ b/.github/workflows/bumping.yml
@@ -53,7 +53,10 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: |
+          pnpm install --no-frozen-lockfile
+          cd server
+          pnpm install --no-frozen-lockfile
 
       - name: "GitHub config"
         run: |
