--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,6 @@
     "envalid": "7.3.1",
     "express": "4.18.2",
     "find-process": "1.4.7",
-    "i18n": "0.15.1",
     "jsdom": "22.1.0",
     "luxon": "3.3.0",
     "mongoose": "6.9.0",
@@ -30,17 +29,17 @@
     "rand-picker": "1.1.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.16",
-    "@types/i18n": "^0.13.6",
-    "@types/jest": "29.4.0",
+    "@types/express": "4.17.17",
+    "@types/jest": "29.5.3",
     "@types/jsdom": "16.2.7",
     "@types/luxon": "1.26.2",
     "@types/node-schedule": "2.1.0",
     "@types/supertest": "2.0.12",
-    "jest": "29.4.1",
+    "jest": "29.6.2",
     "nodemon": "2.0.20",
     "supertest": "6.3.3",
-    "ts-jest": "29.0.5",
-    "tslib": "2.5.0"
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "tslib": "2.6.2"
   }
 }
