--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "build/server.js",
+  "main": "build/index.js",
   "scripts": {
-    "start": "NODE_ENV=production node -r ts-node/register/transpile-only -r tsconfig-paths/register build/server.js",
+    "start": "NODE_ENV=production node build/index.js",
     "start:watch": "NODE_ENV=development nodemon",
     "build": "pnpm build:clean && pnpm build:raw",
-    "build:raw": "tsc -p tsconfig-build.json && resolve-tspaths -o build/src && pnpm build:ln",
+    "build:raw": "tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
     "build:clean": "rm -rf build",
-    "build:ln": "ln -s ../.env build/.env",
     "test": "NODE_ENV=test jest --maxWorkers=1",
     "test:watch": "pnpm run test --watch",
     "test:coverage": "pnpm run test --coverage",
@@ -23,7 +22,7 @@
     "express": "4.18.2",
     "find-process": "1.4.7",
     "jsdom": "22.1.0",
-    "luxon": "3.3.0",
+    "luxon": "3.4.0",
     "mongoose": "6.9.0",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0"
@@ -31,7 +30,7 @@
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/jest": "29.5.3",
-    "@types/jsdom": "16.2.7",
+    "@types/jsdom": "21.1.1",
     "@types/luxon": "1.26.2",
     "@types/node-schedule": "2.1.0",
     "@types/supertest": "2.0.12",
@@ -40,6 +39,9 @@
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "tslib": "2.6.2"
+    "tsc-alias": "^1.8.7",
+    "tsconfig-paths": "4.2.0",
+    "tslib": "2.6.2",
+    "typescript": "5.1.6"
   }
 }
