--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -20,7 +20,7 @@
     "paths": {
       "#tests/*": ["tests/*"],
       "#tests": ["tests"],
-      "#utils": ["src/utils"],
+      "#utils/*": ["src/utils/*"],
       "#modules/*": ["src/modules/*"]
     }
   },
