--- a/server/tsconfig-build.json
+++ b/server/tsconfig-build.json
@@ -1,12 +1,14 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
+    "tests/**/*",
+    "**/test",
+    "**/tests",
+    "spec",
     "src/**/tests/*",
     "src/**/testUtils.ts",
     "**/*.spec.ts",
-    "**/*.test.ts",
-    "spec",
-    "tests/**/*"
+    "**/*.test.ts"
   ],
   "compilerOptions": {
     "sourceMap": false,
