--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,6 +21,7 @@
       "#tests/*": ["tests/*"],
       "#tests": ["tests"],
       "#utils/*": ["src/utils/*"],
+      "#utils": ["src/utils"],
       "#modules/*": ["src/modules/*"]
     }
   },
