--- a/server/package.json
+++ b/server/package.json
@@ -21,25 +21,26 @@
     "envalid": "7.3.1",
     "express": "4.18.2",
     "find-process": "1.4.7",
+    "helmet": "7.0.0",
     "jsdom": "22.1.0",
-    "luxon": "3.4.0",
-    "mongoose": "6.9.0",
+    "luxon": "3.4.1",
+    "mongoose": "7.4.4",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
-    "@types/jest": "29.5.3",
+    "@types/jest": "29.5.4",
     "@types/jsdom": "21.1.1",
-    "@types/luxon": "1.26.2",
+    "@types/luxon": "3.3.1",
     "@types/node-schedule": "2.1.0",
     "@types/supertest": "2.0.12",
-    "jest": "29.6.2",
+    "jest": "29.6.3",
     "nodemon": "2.0.20",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "tsc-alias": "^1.8.7",
+    "tsc-alias": "1.8.7",
     "tsconfig-paths": "4.2.0",
     "tslib": "2.6.2",
     "typescript": "5.1.6"
