--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "migrate": "./src/main/db/migrations/migrate.sh"
   },
   "dependencies": {
-    "axios": "1.4.0",
+    "axios": "1.5.0",
     "date-ops": "2.2.0",
     "dotenv": "16.3.1",
     "envalid": "7.3.1",
@@ -24,10 +24,11 @@
     "find-process": "1.4.7",
     "helmet": "7.0.0",
     "jsdom": "22.1.0",
-    "luxon": "3.4.1",
-    "mongoose": "7.4.4",
+    "luxon": "3.4.2",
+    "mongoose": "7.5.0",
     "node-schedule": "2.1.1",
-    "rand-picker": "1.1.0"
+    "rand-picker": "1.1.0",
+    "zod": "3.22.2"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
@@ -36,7 +37,7 @@
     "@types/luxon": "3.3.1",
     "@types/node-schedule": "2.1.0",
     "@types/supertest": "2.0.12",
-    "jest": "29.6.3",
+    "jest": "29.6.4",
     "nodemon": "2.0.20",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
@@ -44,6 +45,6 @@
     "tsc-alias": "1.8.7",
     "tsconfig-paths": "4.2.0",
     "tslib": "2.6.2",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
