--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mongoose": "7.5.0",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0",
+    "serve-index": "^1.9.1",
     "zod": "3.22.2"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/jsdom": "21.1.1",
     "@types/luxon": "3.3.1",
     "@types/node-schedule": "2.1.0",
+    "@types/serve-index": "^1.9.1",
     "@types/supertest": "2.0.12",
     "jest": "29.6.4",
     "nodemon": "2.0.20",
