--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,7 @@
     "mongoose": "7.5.0",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0",
-    "serve-index": "^1.9.1",
-    "zod": "3.22.2"
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
