chore: mover zod de server a shared

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "server"
   ],
   "dependencies": {
-    "esm": "3.2.25",
-    "zod": "3.22.2"
+    "esm": "3.2.25"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
