--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
+    "zod": "3.22.2",
     "@types/express": "4.17.17",
     "@types/jsdom": "21.1.1",
     "@types/luxon": "3.3.1",
