--- a/server/tsconfig-build.json
+++ b/server/tsconfig-build.json
@@ -8,7 +8,8 @@
     "src/**/tests/*",
     "src/**/testUtils.ts",
     "**/*.spec.ts",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "src/main/db/migrations"
   ],
   "compilerOptions": {
     "sourceMap": false,
