--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "migrate": "./src/main/db/migrations/migrate.sh"
   },
   "dependencies": {
+    "#shared": "workspace:../shared/build",
     "axios": "1.5.0",
+    "cors": "2.8.5",
     "date-ops": "2.2.0",
     "dotenv": "16.3.1",
     "envalid": "7.3.1",
@@ -28,15 +30,16 @@
     "mongoose": "7.5.0",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0",
-    "serve-index": "^1.9.1",
-    "#shared": "workspace:../shared/build"
+    "serve-index": "1.9.1"
   },
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
-    "zod": "3.22.2",
+    "@types/cors": "^2.8.14",
     "@types/express": "4.17.17",
+    "@types/jest": "29.5.4",
     "@types/jsdom": "21.1.1",
     "@types/luxon": "3.3.1",
+    "@types/node": "18.17.14",
     "@types/node-schedule": "2.1.0",
     "@types/serve-index": "^1.9.1",
     "@types/supertest": "2.0.12",
@@ -44,7 +47,6 @@
     "supertest": "6.3.3",
     "ts-node": "10.9.1",
     "tsc-alias": "1.8.7",
-    "@types/jest": "29.5.4",
-    "@types/node": "18.17.14"
+    "zod": "3.22.2"
   }
 }
