--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "supertest": "6.3.3",
     "ts-node": "10.9.1",
     "tsc-alias": "1.8.7",
-    "zod": "3.22.2"
+    "zod": "3.22.2",
+    "jest": "workspace:../node_modules/jest"
   }
 }
