--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.7.2",
     "swr": "^2.2.2"
   },
   "devDependencies": {
