--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "rand-picker": "1.1.0",
     "serve-index": "1.9.1",
     "sha256-file": "1.0.0",
-    "socket.io": "4.7.2"
+    "socket.io": "4.7.2",
+    "zod": "3.22.2"
   },
   "description": "",
   "devDependencies": {
@@ -39,8 +40,7 @@
     "nodemon": "2.0.20",
     "supertest": "6.3.3",
     "ts-node": "10.9.1",
-    "tsc-alias": "1.8.7",
-    "zod": "3.22.2"
+    "tsc-alias": "1.8.7"
   },
   "main": "build/index.js",
   "name": "server",
