--- a/bin/local/run/docker-compose.yml
+++ b/bin/local/run/docker-compose.yml
@@ -19,20 +19,19 @@ services:
   #     - MONGO_HOSTNAME=$MONGO_HOSTNAME
   #     - MONGO_PORT=$MONGO_PORT
   #     - MONGO_DB=$MONGO_DB
-  mcenter-mongo:
-    image: mongo
+  mongo:
+    image: mongo:7.0.3
     restart: always
     ports:
       - 27017:27017
     env_file:
       - .env.db
 
-  mcenter-mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mcenter-mongo:27017/
+ # mongo-express:
+ #   image: mongo-express
+ #   restart: always
+ #   ports:
+ #     - 8081:8081
+ #   env_file:
+ #     - .env.me
+      
