--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
     "@next/eslint-plugin-next": "^13.5.4",
+    "@types/node": "18.17.14",
     "@types/react": "18.2.21"
   },
   "engines": {
