--- a/vlc/package.json
+++ b/vlc/package.json
@@ -8,12 +8,12 @@
     "envalid": "7.3.1",
     "express": "4.18.2",
     "fast-xml-parser": "4.2.7",
+    "find-process": "1.4.7",
     "fluent-ffmpeg": "2.1.2",
     "helmet": "7.0.0",
     "html-entities": "2.4.0",
     "jsdom": "22.1.0",
     "luxon": "3.4.2",
-    "mongoose": "7.5.0",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0",
     "serve-index": "1.9.1",
