--- a/shared/package.json
+++ b/shared/package.json
@@ -13,9 +13,11 @@
     "test:coverage:clean": "rm -rf coverage"
   },
   "dependencies": {
-    "zod": "3.22.2"
+    "zod": "3.22.2",
+    "find-process": "1.4.7"
   },
   "devDependencies": {
+    "jest": "workspace:../node_modules/jest",
     "@types/jest": "29.5.4",
     "@types/node": "18.17.14"
   }
