--- a/vlc/package.json
+++ b/vlc/package.json
@@ -3,37 +3,21 @@
     "#shared": "workspace:../shared/build",
     "axios": "1.5.0",
     "cors": "2.8.5",
-    "date-ops": "2.2.0",
     "dotenv": "16.3.1",
-    "envalid": "7.3.1",
     "express": "4.18.2",
-    "fast-xml-parser": "4.2.7",
-    "find-process": "1.4.7",
-    "fluent-ffmpeg": "2.1.2",
-    "helmet": "7.0.0",
-    "html-entities": "2.4.0",
     "jsdom": "22.1.0",
-    "luxon": "3.4.2",
-    "node-schedule": "2.1.1",
-    "rand-picker": "1.1.0",
-    "serve-index": "1.9.1",
-    "sha256-file": "1.0.0",
-    "socket.io": "4.7.2",
+    "socket.io-client": "4.7.2",
     "zod": "3.22.2"
   },
   "description": "",
   "devDependencies": {
+    "socket.io": "4.7.2",
     "#sharedSrc": "workspace:../shared/src",
     "@types/cors": "2.8.14",
     "@types/express": "4.17.17",
-    "@types/fluent-ffmpeg": "2.1.22",
     "@types/jest": "29.5.4",
     "@types/jsdom": "21.1.1",
-    "@types/luxon": "3.3.1",
     "@types/node": "18.17.14",
-    "@types/node-schedule": "2.1.0",
-    "@types/serve-index": "1.9.1",
-    "@types/sha256-file": "1.0.1",
     "@types/supertest": "2.0.12",
     "jest": "workspace:../node_modules/jest",
     "nodemon": "2.0.20",
