--- a/packages/package.json
+++ b/packages/package.json
@@ -16,7 +16,8 @@
     "server"
   ],
   "dependencies": {
-    "esm": "3.2.25"
+    "esm": "3.2.25",
+    "tslib": "2.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
@@ -38,8 +39,7 @@
     "typescript": "5.2.2",
     "jest": "29.6.4",
     "ts-jest": "29.1.1",
-    "@types/jest": "29.5.4",
-    "tslib": "2.6.2"
+    "@types/jest": "29.5.4"
   },
   "scripts": {
     "release": "standard-version",
