--- a/bin/docker/docker-compose.yml
+++ b/bin/docker/docker-compose.yml
@@ -2,13 +2,8 @@ version: "3.9"
 
 services:
   front:
-    build:
-      context:  ../../packages
-      dockerfile: front/Dockerfile
-      args:
-        ENV: ${ENV}
-    image: mcenter-front:${MCENTER_VERSION}
-    container_name: mcenter-front
+    image: mcenter/front:latest
+    container_name: mcenter_front
     ports:
       - "${MCENTER_FRONT_PORT}:3000"
     restart: always
@@ -16,13 +11,10 @@ services:
       - server
 
   server:
-    build:
-      context:  ../../packages
-      dockerfile: server/Dockerfile
-      args:
-        ENV: ${ENV}
-    image: mcenter-server:${MCENTER_VERSION}
-    container_name: mcenter-server
+    image: mcenter/server:latest
+    container_name: mcenter_server
+    env_file:
+      - ../../packages/server/.env
     ports:
       - "${MCENTER_SERVER_PORT}:8080"
     restart: always
@@ -35,7 +27,7 @@ services:
   mongo:
     profiles: ["local"]
     image: mongo:7.0.3
-    container_name: mcenter-mongo
+    container_name: mcenter_mongo
     restart: always
     ports:
       - 27017:27017
@@ -45,7 +37,7 @@ services:
   mongo-express:
     profiles: ["local"]
     image: mongo-express
-    container_name: mcenter-mongo-express
+    container_name: mcenter_mongo-express
     restart: always
     ports:
       - 8079:8081
