--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -49,7 +49,7 @@
     "build": "pnpm build:clean && pnpm build:raw",
     "build:clean": "rm -rf build",
     "build:raw": "tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
-    "migrate": "./src/main/db/migrations/migrate.sh",
+    "db:migrate": "./bin/migrations/migrate.mjs",
     "start": "NODE_ENV=production node build/index.js",
     "start:watch": "NODE_ENV=development nodemon",
     "test": "NODE_ENV=test jest --maxWorkers=1",
