--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,25 +7,26 @@
     "envalid": "7.3.1",
     "express": "4.18.2",
     "fluent-ffmpeg": "2.1.2",
+    "glob": "10.3.10",
     "helmet": "7.0.0",
     "jsdom": "22.1.0",
     "luxon": "3.4.2",
     "mongoose": "7.5.0",
+    "node-id3": "0.2.6",
+    "node-media-server": "2.6.2",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0",
+    "reflect-metadata": "^0.2.1",
     "serve-index": "1.9.1",
     "sha256-file": "1.0.0",
     "socket.io": "4.7.2",
-    "zod": "3.22.2",
+    "tsyringe": "4.8.0",
     "youtube-mp3-downloader": "0.7.11",
-    "node-media-server": "2.6.2",
-    "node-id3": "0.2.6",
-    "glob": "10.3.10"
+    "zod": "3.22.2"
   },
   "description": "",
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
-    "dotenv": "16.3.1",
     "@types/cors": "2.8.14",
     "@types/express": "4.17.17",
     "@types/fluent-ffmpeg": "2.1.22",
@@ -37,6 +38,7 @@
     "@types/serve-index": "1.9.1",
     "@types/sha256-file": "1.0.1",
     "@types/supertest": "2.0.12",
+    "dotenv": "16.3.1",
     "jest": "workspace:../node_modules/jest",
     "nodemon": "3.0.2",
     "supertest": "6.3.3",
