--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -8,6 +8,7 @@
     "inlineSources": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
