quitada interdepenendencia entre servicios de WebSockets de VLC y Front con el uso de message broker

--- a/packages/vlc/.vscode/launch.json
+++ b/packages/vlc/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "name": "nodemon",
+      "name": "debug vlc",
       "request": "launch",
       "restart": true,
       "runtimeExecutable": "npm",
