Inputs en front y comunicación con server (faltan las tags)

--- a/packages/front/tsconfig.json
+++ b/packages/front/tsconfig.json
@@ -6,20 +6,16 @@
     "incremental": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
     "paths": {
-      "#modules/*": [
-        "modules/*"
-      ],
-      "#shared/*": [
-        "../shared/build/*"
+      "#modules/*": ["modules/*"],
+      "#shared/*": ["../shared/build/*"],
+      "#sharedSrc/*": [
+        // quitar en producción
+        "../shared/src/*"
       ]
     },
     "resolveJsonModule": true,
@@ -32,13 +28,6 @@
       }
     ]
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
