chore(front): move input components

--- a/packages/front/tsconfig.json
+++ b/packages/front/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "#modules/*": ["modules/*"],
       "#shared/*": ["../shared/build/*"],
+      "#uikit/*": ["modules/ui-kit/*"],
       "#sharedSrc/*": [
         // quitar en producción
         "../shared/src/*"
