--- a/.github/workflows/bumping.yml
+++ b/.github/workflows/bumping.yml
@@ -102,7 +102,7 @@ jobs:
           echo -e "----------"
 
           filter="^(fix|feat)(\((.*)\))?:|BREAKING CHANGE:|^(.*)!:"
-          bumping_messages=$(echo "$commits" | grep -E "$filter" | xargs)
+          bumping_messages=$(echo "$commits" | grep -E "$filter" | xargs -0)
 
           if [ -n "$bumping_messages" ]; then
             echo "\nCommits nuevos a considerar para el bumping:"
