fix(front): style updates

--- a/packages/front/tsconfig.json
+++ b/packages/front/tsconfig.json
@@ -14,6 +14,7 @@
       "#modules/*": ["modules/*"],
       "#shared/*": ["../shared/build/*"],
       "#uikit/*": ["modules/ui-kit/*"],
+      "#styles/*": ["styles/*"],
       "#sharedSrc/*": [
         // quitar en producción
         "../shared/src/*"
